--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ npm-debug.log*
 
 # TypeScript
 *.tsbuildinfo
+
+# Images / screenshots (generated artifacts)
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.webp
