--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build": "vite build",
     "build:check": "tsc -b && vite build",
     "preview": "vite preview",
+    "scaffold:renderer": "node scripts/scaffold-renderer.mjs",
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
@@ -32,7 +33,8 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:all": "npm run lint && npm run typecheck && npm run test && npm run test:e2e",
-    "screenshots": "tsx scripts/screenshot-slides.ts"
+    "screenshots": "tsx scripts/screenshot-slides.ts",
+    "record-gif": "tsx scripts/record-gif.ts"
   },
   "dependencies": {
     "@dagrejs/dagre": "^2.0.3",
